# tss

./: .gitignore  LICENSE  README.md  index.html
.github/workflows/: ci.yml
backend/: generate.py  pyproject.toml
backend/src/secretsanta/: __init__.py  cli.py  crypto.py  pairings.py  readers.py
backend/tests/: test_generate.py
backend/tests/secretsanta/: __init__.py  cli_test.py  crypto_test.py  integration_test.py  pairings_test.py  readers_test.py
private/: couples.txt.template  participants.txt.template
