[project]
name = "secretsanta"
version = "0.1.0"
description = "Secret-Santa pairing generator"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
secretsanta = "secretsanta.cli:main"

[tool.hatchling.build.targets.wheel]
packages = ["src/secretsanta"]

[dependency-groups]
dev = ["pytest>=7.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
